# wlplan

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  TODO.md  cmake_build.py  install.sh  profile_new.md  profile_old.md  pyproject.toml  setup.py  test-requirements.txt  tmp.pkl
.github/workflows/: formatting.yml  pages.yml  profile.yml  publish_pypi.yml  pytest.yml
docs/: Makefile  README.md  conf.py  docs-requirements.txt  index.rst
docs/examples/: blocksworld.ipynb
docs/package/: data.rst  feature_generation.rst  feature_generator.rst  graph.rst  graph_generator.rst  planning.rst
docs/source/: conf.py  index.rst
include/data/: dataset.hpp
include/feature_generation/: dependency_graph.hpp  features.hpp  iwl_features.hpp  kwl2_features.hpp  lwl2_features.hpp  maxsat.hpp  neighbour_container.hpp  (+3 more)
src/: main.cpp  serialise.cpp
tests/: blocks_simple_test.py  check_not_debug.py  colours.py  custom_graph_test.py  ipc23lt_colours_test.py  ipc23lt_profile.py  profile_ipc23lt.py  save_load_test.py  test-requirements.txt  test_blocks_simple.py  test_custom_graph.py  test_doc_example.py  test_graphs.py  test_ill_formed_dataset.py  test_iwl.py  test_kwl2.py  test_lwl2.py  test_niwl.py  test_parse_domain.py  test_parse_problem.py  test_pruning.py  test_save_load.py  test_serialise.py  test_train_eval_blocks.py  test_tutorials.py  test_wl.py  test_wl_algorithms.py  train_eval_blocks_test.py  util.py
wlplan/: __version__.py  data.py  feature_generation.py  feature_generator.py  graph.py  graph_generator.py  planning.py
(+344 files in other folders)
