[project]
name = "wlplan"
description = "WLPlan: Relational Features for PDDL Planning"
authors = [{ name = "Dillon Z. Chen", email = "dillon.chen1@gmail.com" }]
dynamic = [
    "classifiers",
    "dependencies",
    "keywords",
    "license",
    "readme",
    "version",
]

[project.urls]
Homepage = "https://dillonzchen.github.io/comingsoon.html"
Documentation = "https://dillonzchen.github.io/comingsoon.html"
Source = "https://github.com/dillonzchen/wlplan"

[build-system]
requires = [
    "setuptools>=62.3.0,<80.0",
    "pybind11>=2.10.0",
    "ninja",
    "wheel",
    "cmake",
    "numpy",
    "packaging",
    "typing-extensions>=4.10.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
indent = 4
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
